--- a/css/stylechat.css
+++ b/css/stylechat.css
@@ -84,6 +84,8 @@ img {
 }
 .chat-box .chat-room {
   min-height: 300px;
+  max-height: 500px;
+  overflow: auto;
   background-color: #f7f9fb;
   padding: 15px;
 }
